[package]
name = "printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["printer-derive", "printer-core"]

[dev-dependencies]
trybuild = "1.0.0"

[dependencies]
printer-derive = { version = "0.1.0", path = "printer-derive" }
tokio = {version = "1.33.0", features = ["full"]}
crossbeam-channel = "0.5.8"
once_cell = "1.18.0"
