[package]
name = "printer-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
proc-macro-error = "1.0.0"
printer-core = { version = "0.1.0", path = "../printer-core" }

